<resources>
    <string name="app_name">Пациенты больницы</string>

    <string name="app_nameString">Приложение: Пациенты больницы</string>
    <string name="app_version">Версия: 1.0.0</string>
    <string name="app_info">Мобильная информационно-справочная система для врачей.</string>
    <string name="app_description">Приложение предоставляет доступ к сведениям о пациентах, истории лечения, назначениях и медицинской информации, необходимой для повседневной клинической практики.</string>
    <string name="app_creator">Разработчик: Рябикин Кирилл Вячеславович</string>
    <string name="app_contacts">Контакты: support@example.com</string>
    <string name="app_privacyPolicy">Политика конфиденциальности: www.minecraft.story-mod.com/privacy</string>

    <!-- Экран входа -->
    <string name="enterPhrase">Вход</string>
    <string name="enterId">ID сотрудника</string>
    <string name="enterPassword">Пароль</string>
    <string name="enterButton">Войти</string>
    <string name="wrongPasswordToast">Неверный логин или пароль</string>
    <string name="fillTheGapsToast">Заполните все поля</string>
    <string name="helpInfo">В случае возникновения ошибки обратитесь к своему системному администратору</string>

    <!-- BottomNavigationView -->
    <string name="home">Главная</string>
    <string name="search">Поиск</string>
    <string name="profile">Профиль</string>

    <!-- Текст для фрагмента главная страница -->
    <string name="patient_statistics">Количество наблюдаемых вами\nпациентов:</string>
    <string name="patient_statistics2">Ваши пациенты</string>
    <string name="notifications">Уведомления</string>
    <string name="greetings">Здравствуйте,</string>

    <!-- Текст для фрагмента профиль -->
    <string name="patientsList">Список всех пациентов</string>
    <string name="searchHint">Введите ID пациента</string>
    <string name="notificationsList">Новых уведомлений нет</string>

    <!-- Текст для фрагмента профиль -->
    <string name="profile_title">Профиль</string>
    <string name="settings">Настройки</string>
    <string name="about_app">О приложении</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="exitDialogNO">Отмена</string>
    <string name="exitDialogYES">Выйти</string>
    <string name="exitDialogSAVE">Сохранить</string>
    <string name="exitDialogBACK">Вернуться</string>
    <string name="exitDialog">Выход</string>
    <string name="exitTextConfirmation">Вы уверены, что хотите выйти из аккаунта?</string>
    <string name="appInfoConfirmation">Понятно</string>

    <!-- Текст для мини-карточки пациента -->
    <string name="oms">Полис ОМС:</string>
    <string name="look_card">Посмотреть карточку</string>
    <string name="gender">Пол:</string>
    <string name="age">Возраст:</string>
    <string name="diagnosis">Диагноз:</string>

    <!-- Текст для карты пациента -->
    <string name="patient_leadingPhysician">Ведущий врач:</string>
    <string name="patient_medicalHistoryTitle">История болезни:</string>
    <string name="patient_personalData">Персональные данные:</string>
    <string name="patient_prescribedMedications">Назначения</string>
    <string name="patient_medicalHistory">История</string>
    <string name="patient_button">Редактировать</string>
    <string name="patient_toolbarTitle">Медицинская карта пациента</string>
    <string name="patient_FIO">ФИО:</string>
    <string name="patient_birthDate">Дата рождения:</string>
    <string name="patient_snils">СНИЛС:</string>
    <string name="patient_registrationDate">Дата обращения в клинику:</string>
    <string name="patient_saveButton">Сохранить</string>
    <string name="patient_editPatientHistoryTitle">Редактирование истории</string>
    <string name="patient_saveTextConfirmation">Изменённый текст не будет сохранён</string>
    <string name="patient_saveTextConfirmationTitle">Вернуться к карте пациента?</string>
    <string name="patient_dataSaved">Данные сохранены</string>
    <string name="patient_dataNotSaved">Данные не сохранены</string>

    <!-- Текст для экрана настроек приложения -->
    <string name="settings_Language">Язык</string>
    <string name="settings_RingtoneTitle">Рингтон уведомления</string>
    <string name="settings_VolumeTitle">Громкость рингтона</string>

    <string name="settings_ringtoneArray1">Нет</string>
    <string name="settings_ringtoneArray2">Стандартный</string>
    <string name="settings_ringtoneArray3">Музыкальная шкатулка</string>
    <string name="settings_ringtoneArray4">Капли</string>

    <string name="settings_volumeArray1">тихо</string>
    <string name="settings_volumeArray2">нормально</string>
    <string name="settings_volumeArray3">громко</string>

    <!-- Текст для экрана фильтров -->
    <string name="filters_sortID">ID (стандартная сортировка)</string>
    <string name="filters_sortDate">Дате обращения в клинику</string>
    <string name="filters_sortAge">Дате рождения</string>
    <string name="sort">Сортировать по</string>
    <string name="filter1">Фильтр по заболеваниям</string>
    <string name="filter1Chose">Выберите заболевание</string>
    <string name="filter2">Фильтр по лечащему врачу</string>
    <string name="filter2Chose">Выберите врача</string>
    <string name="buttonFilterApply">Применить</string>
    <string name="buttonFilterReset">Сбросить</string>
    <string name="all1">Все заболевания</string>
    <string name="all2">Все врачи</string>


</resources>