<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="language"
        android:title="@string/settings_Language"
        android:entries="@array/settings_language"
        android:entryValues="@array/settings_language_values"
        android:defaultValue="ru" />

    <ListPreference
        android:key="notification_ringtone"
        android:title="@string/settings_RingtoneTitle"
        android:entries="@array/settings_ringtone"
        android:entryValues="@array/settings_ringtone"
        android:defaultValue="default" />

    <ListPreference
        android:key="notification_volume"
        android:title="@string/settings_VolumeTitle"
        android:entries="@array/settings_volume"
        android:entryValues="@array/settings_volume"
        android:defaultValue="default" />




</PreferenceScreen>