<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="24dp"
    android:paddingHorizontal="24dp"
    android:paddingBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_card4"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="36dp"
        android:gravity="center">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/info"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_saveTextConfirmationTitle"
            android:textColor="@color/black"
            android:layout_marginStart="14dp"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_saveTextConfirmation"
        android:textSize="16sp"
        android:layout_gravity="left"
        android:layout_marginBottom="24dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingTop="12dp">

        <Button
            android:id="@+id/buttonBACK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:layout_marginStart="1dp"
            style="@style/MyRoundedButtonGray"
            android:textColor="@color/gray"
            android:layout_weight="1"
            android:text="@string/exitDialogBACK"/>

        <Button
            android:id="@+id/buttonSAVE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:text="@string/exitDialogSAVE" />

    </LinearLayout>

</LinearLayout>
