<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:paddingHorizontal="15dp"
    android:paddingTop="24dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profileFIO"
            android:layout_width="0dp"
            android:maxLines="2"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textColor="@color/black"

            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profileImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profileEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"

            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profileImage"
            app:layout_constraintTop_toBottomOf="@+id/profileFIO" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="24dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/settings"
            app:tint="@color/gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:layout_marginStart="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/appInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/info"
            app:tint="@color/gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:layout_marginStart="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:alpha="0.8"
        android:background="@drawable/exit_button_background"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        tools:ignore="TouchTargetSizeCheck">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textColor="@color/red"
            android:textSize="18sp" />
    </LinearLayout>



</LinearLayout>