<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="24dp"
    android:paddingHorizontal="15dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/patientToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/black"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_card4"
        android:padding="15dp">

        <ImageView
            android:id="@+id/patientImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:maxLines="2"
            android:text="@string/diagnosis"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/patientImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/patient_diagnosis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:lines="2"
            android:text="Расстройство личности II степени"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/patientImage"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="@string/patient_leadingPhysician"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/patientImage"
            app:layout_constraintTop_toBottomOf="@+id/patient_diagnosis" />

        <TextView
            android:id="@+id/patient_leadingPhysician"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Рябикин К.В."
            android:textSize="14sp"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/patientImage"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/patient_Id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="ID: 12A-012"
            android:alpha="0.65"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:gravity="end"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/patientImage"
            app:layout_constraintTop_toBottomOf="@+id/patient_leadingPhysician"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <TextView
                android:id="@+id/patient_FIO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                android:alpha="0.8"
                android:text="ФИО: Николай Николаев Николаевич"/>

            <TextView
                android:id="@+id/patient_gender"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="Пол:"/>

            <TextView
                android:id="@+id/patient_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="Возраст:"/>

            <TextView
                android:id="@+id/patient_birthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="Дата рождения:"/>

            <TextView
                android:id="@+id/patient_snils"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="СНИЛС:"/>

            <TextView
                android:id="@+id/patient_policyNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="Полис ОМС:"/>

            <TextView
                android:id="@+id/patient_registrationDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="Дата обращения в клинику:"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/mid_gray"
                android:alpha="0.3"/>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp"
                android:padding="0dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/medical_history"
                    app:tint="@color/gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_medicalHistoryTitle"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:alpha="0.8"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/buttonColor"
                android:text="@string/patient_prescribedMedications"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="afdbmse sm fsemf  semfkmskoemr sef sefm s ekf aefm semf s smefk smef  skef mskemf s kef"

                />

            <TextView
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/buttonColor"
                android:text="@string/patient_medicalHistory"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="afdbmse sm fsemf  semfkmskoemr smf sm msefmk msemf skemf ks msk mefms kfs ks f aemf ksemf ksm mse sef sefm s ekf aefm semf s smefk smef  skef mskemf s kef"

                />

            <Button
                android:clickable="true"
                android:visibility="visible"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patient_button"
                android:background="@drawable/rectangle_card3"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>